--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f0f0f3;
+  background-color: #eff2f9;
 }
 
 code {
