Fix linters errors

--- a/src/components/Books/books.css
+++ b/src/components/Books/books.css
@@ -3,6 +3,7 @@
 
 .booklist__container {
   margin-top: 3rem;
+
   /* font-family: 'Acme', sans-serif; */
   font-family: 'Preahvihear', sans-serif;
 }
@@ -12,14 +13,14 @@
   grid-template-columns: repeat(3, 1fr);
   letter-spacing: 1px;
   list-style: none;
-  margin: 0 3% 2rem;
+  margin: 0 3% 3%;
   border-radius: 1rem;
   padding: 1rem;
   background-color: #ecebe4;
 }
 
 .drop__shadow {
-  box-shadow: -10px -10px 30px #ffffff, 10px 10px 30px rgba(174, 174, 192, 0.4);
+  box-shadow: -10px -10px 30px #fff, 10px 10px 30px rgba(174, 174, 192, 0.4);
 }
 
 /* .inner__shadow {
@@ -33,7 +34,7 @@
 }
 
 .book__image img {
-  width: 6rem;
+  width: 5rem;
   border-radius: 50%;
 }
 
@@ -65,37 +66,25 @@
   border: 1px solid #ddc59b;
 }
 
+.input__container > button {
+  padding: 0.8rem;
+}
+
 .cta__container > button:hover {
   background-color: rgb(51, 182, 226);
   color: #fff;
+}
+
+.progress__container1 {
+  display: none;
 }
 
 .progress__container p {
   color: rgb(139, 136, 136);
 }
 
-/* .circle {
-  width: 4.25rem;
-  height: 4.25rem;
-  border-radius: 50%;
-  border: 4px solid rgb(51, 182, 226);
-  border-width: 5px;
-} */
-
-/* .percentage h1 {
-  font-size: 3rem;
-  font-weight: 200;
-  margin: 0;
-} */
-
-/* .percentage p {
-  margin: 0;
-  color: rgb(139, 136, 136);
-} */
-
 .progress__container::after {
   content: "";
-  /* position: absolute; */
   right: 15%;
   width: 2px;
   height: 4rem;
@@ -133,16 +122,12 @@
 
 form {
   display: grid;
-  grid-template-columns: 1fr 0.5fr 0.2fr;
+  grid-template-columns: 1fr 1fr 0.5fr 0.4fr;
   gap: 1rem;
-  width: 80%;
+  width: 100%;
 }
 
 input {
-  padding: 0.8rem;
-}
-
-.input__container > button {
   padding: 0.8rem;
 }
 
@@ -151,4 +136,43 @@ input {
   font-weight: 600;
   background: rgb(51, 182, 226);
   border: none;
+}
+
+/* Media queries */
+@media only screen and (max-width: 675px) {
+  .book__container {
+    grid-template-columns: 1fr;
+    margin: 0 3% 5%;
+  }
+
+  .cta__container {
+    display: flex;
+  }
+
+  .progress__btn {
+    margin-top: 0.6rem;
+  }
+
+  form {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  select {
+    padding: 0.8rem;
+  }
+
+  .add__btn {
+    padding: 0.8rem;
+  }
+
+  .progress__container {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 890px) and (min-width: 675px) {
+  .book__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
